saude-event-agent/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: saude-event-agent
  labels:
    name: saude-event-agent
    app: saude-event-agent
    environment: production
